--- a/PokeMonCardsList/src/FetchingApi.css
+++ b/PokeMonCardsList/src/FetchingApi.css
@@ -1,4 +1,3 @@
-/* General styles */
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f9;
@@ -35,7 +34,7 @@ body {
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     position: relative;
-    overflow: hidden; /* To contain pseudo-elements */
+    overflow: hidden;
 }
 
 .Pokemon-card::before {
