--- a/PokeMonCardsList/src/Pokemon.css
+++ b/PokeMonCardsList/src/Pokemon.css
@@ -24,8 +24,8 @@
 }
 
 .Card-Item:hover {
-    transform: scale(1.1) rotateY(10deg) rotateX(5deg);
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.25);
+    transform: scale(1.2) rotateY(10deg) rotateX(5deg);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
     animation-play-state: paused;
 }
 
@@ -219,3 +219,42 @@
     animation-play-state: paused;
 }
 
+.Card-Item figcaption {
+    margin-top: 1rem;
+}
+.Card-Item:hover h2 {
+    color: #007bff;
+}
+
+.Title-Container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    margin-bottom: 2rem;
+    position: relative;
+}
+
+.Pokeball {
+    width: 50px;
+    height: 50px;
+    transition: transform 0.5s ease-in-out;
+}
+
+.Header {
+    transition: transform 0.5s ease-in-out;
+}
+
+.Title-Container:hover .Pokeball {
+    transform: translateX(330px);
+}
+
+
+.Title-Container:hover .Header {
+    transform: translateX(-80px);
+}
+
+.Container {
+    padding: 2rem;
+    text-align: center;
+}
